--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@openzeppelin/contracts": "^2.5.0",
     "@openzeppelin/test-environment": "^0.1.3",
     "@openzeppelin/test-helpers": "^0.5.5",
+    "bn.js": "^5.1.1",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "ethereumjs-abi": "^0.6.8",
     "husky": "^4.2.3",
     "micromatch": "^4.0.2",
     "mocha": "^7.1.1",
